// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[RequestList] should match empty snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    id="request-list"
  >
    <div
      class="flex select-none justify-between bg-slate-100 p-1 font-bold"
    >
      Requests
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    />
  </div>
</div>
`;

exports[`[RequestList] should match requestful snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    id="request-list"
  >
    <div
      class="flex select-none justify-between bg-slate-100 p-1 font-bold"
    >
      Requests
    </div>
    <div
      class="flex flex-col overflow-y-auto"
    >
      <div
        class="select-none overflow-hidden text-ellipsis whitespace-nowrap"
      >
        <span>
          https://example.com
        </span>
      </div>
    </div>
  </div>
</div>
`;
